# Lesson-QT_6

Task_1_v1/: CMakeLists.txt  examplerace.cpp  mainwindow.cpp
